# point-cloud-foundation

./: Makefile  README.md  pyproject.toml
docs/: mkdocs.yml
docs/docs/: index.md
introducenumpyandmatplotlib/: __init__.py  dataset.py  features.py  plots.py
introducenumpyandmatplotlib/modeling/: predict.py  train.py
notebooks/: notebooks-partof-numpy.ipynb
