[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "introducenumpyandmatplotlib"
version = "0.0.1"
description = "Learning numpy and matplotlib as fondation of pointcloud"
authors = [
  { name = "padli" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.10.0"


[tool.ruff]
line-length = 99
src = ["introducenumpyandmatplotlib"]
include = ["pyproject.toml", "introducenumpyandmatplotlib/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["introducenumpyandmatplotlib"]
force-sort-within-sections = true

